Succesfully Completed Task 1

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <input class="input"type="text"/>
     </div>
     <div class="row">
-      <button class="button">C</button>
+      <button class="button">AC</button>
       <button class="button">/</button>
-      <button class="button">9</button>
+      <button class="button">%</button>
       <button class="button">00</button>      
     </div>
     <div class="row">
